fix: no scrolling when page too large

--- a/src/vue/YearsInPixels.css
+++ b/src/vue/YearsInPixels.css
@@ -1,16 +1,11 @@
 #app {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100vh;
   background: #ececec;
 }
 
-#header {
-  height: auto;
-}
-
 #main-view {
-  overflow: hidden;
   height: 100%;
-  width: 100vw;
+  width: 100%;
 }
